fixed gaps

--- a/man-page/style.css
+++ b/man-page/style.css
@@ -44,8 +44,8 @@ a:hover {
 }
 
 .row {
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     display: flex;
     flex-wrap: wrap;
     width: 100%;
